** Fix minor bug with 'Sketch.caption' getter
*** Add 'Ellipse' and 'Arc' classes to 'sc8pr.shape'
*** Add 'sprite.onreset' event, called by 'sprite.ondraw'
*** Add 'Video' methods 'splice', 'info', '__add__', 'effect', 'effectInPlace', 'play'
*** 'Video.clip' accepts negative 'start' and 'end' arguments
*** 'Sprite.costumeTime' may be negative for reverse playback
*** 'Plot' constructor can take an object with 'size' attribute in place of a size literal
*** 'Plot.clockwise' and 'Plot.units' properties
*** Add 'geom.smallAngle' and 'geom.shiftAlongNormal'
*** Add 'Graphic.scale'
*** Fix bug in 'Canvas.__init__'
*** Add 'sc8pr.plot' package and 'sc8pr.misc.table' module
*** Add additional 'Graphic' and 'Canvas' methods to support new plotting/scrolling package
*** Add 'Canvas.clipArea', 'Canvas.resizeContent', 'Canvas.icons, 'Canvas.iconSize'
*** Allow 'Canvas.__isub__' to accept a string; add 'Canvas.removeItems'
*** Add 'util.mix'
*** Replace 'Canvas.grid' by 'Table.grid'
*** Create 'util.circle_intersect'
*** Add 'QCircle' and make 'Circle' faster drawing
* Modify 'sc8pr.gui.dialog'
*** Create Dialog base class in 'sc8pr.gui.dialog'
*** Add 'Image.autocrop' and 'util.autocrop' (depends on pygame.surfarray -> numpy)
* Fire all DRAW events after drawing the entire sketch is complete.
** Fix divide-by-zero in 'shape.Line' when length is 0
*** Add 'sc8pr.misc.effect.FastDissolve'
*** Change 'deleteRect' argument default to False in 'Graphic.remove' and 'Renderable.remove'
*** Change CLICK event to MOUSEDOWN and implement a new CLICK event (after MOUSEUP only when on the same item)
*** Add 'plot.shape.PLine'
*** Add 'Image.crop', 'Image.flip', and 'Image.cut'
*** 'Video.__getitem__' accepts slices and calls 'Video.clip'
* Normalize examples to use 'play' as name of main function
*** Add 'sc8pr.examples.vector2d'
*** Add 'robot.gyroSample' and 'robot.gyroChange' in 'sc8pr.examples.robotSim'
*** Add 'sc8pr.misc.hsv.hsvBox'


!!! Add 'util.borderRadius'