@@ -68,6 +68,7 @@ sc8pr 2.2.dev...
 *** Add 'sc8pr.examples.vector2d'
 *** Add 'robot.gyroSample' and 'robot.gyroChange' in 'sc8pr.examples.robotSim'
 *** Add 'sc8pr.misc.hsv.hsvBox'
+*** Add 'start' and 'end' parameters to 'ImageIO.decodev'; adds 'ffmpeg_meta' attribute to video
 
 
 !!! Add 'util.borderRadius'
